Remove unsupported option illegal-access=deny
support was removed in java 17.0